fix: Extends neuroglancer height to 100% from 88%.
This removes some white space below the neuroglancer viewer and provides
a better viewing window.

--- a/src/js/components/Result.css
+++ b/src/js/components/Result.css
@@ -1,5 +1,5 @@
 .neuroglancer-container, #neuroglancer-container {
-  height: 88%;
+  height: 100%;
   color: #fff;
 }
 .heatmapbutton {
